[gd_scene load_steps=7 format=2]

[ext_resource path="res://actors/Actor.gd" type="Script" id=1]
[ext_resource path="res://gui/name_plate/NamePlate.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/actor_indicator/ActorIndicator.tscn" type="PackedScene" id=4]

[sub_resource type="SphereShape" id=1]
radius = 10.0

[sub_resource type="CapsuleShape" id=2]
radius = 0.3
height = 1.2

[sub_resource type="CylinderShape" id=3]
radius = 0.3
height = 0.1

[node name="Actor" type="KinematicBody"]
script = ExtResource( 1 )

[node name="VisionRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="TargetArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0 )
input_ray_pickable = false
monitorable = false
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="TargetArea"]
shape = SubResource( 1 )

[node name="NamePlate" parent="." instance=ExtResource( 3 )]

[node name="TargetIndicator" parent="." instance=ExtResource( 4 )]

[node name="GlobalCoolDown" type="Timer" parent="."]

[node name="CollisionShapeBody" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 2 )

[node name="CollisionShapeBase" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 3 )

[node name="RotationTween" type="Tween" parent="."]

[connection signal="body_entered" from="TargetArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="TargetArea" to="." method="_on_AttackArea_body_exited"]
